--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/kitamura-hitomi-911/storybook_html_test#readme",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@pickra/copy-code-block": "^1.2.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
